working filters, starting forms

--- a/hospital_pricing/templates/hospital_pricing/base.html
+++ b/hospital_pricing/templates/hospital_pricing/base.html
@@ -26,7 +26,7 @@
       <a class="navbar-brand" href="{% url 'home' %}">U.S. Hospitals: Cost vs Quality</a>
        <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'hospital' %}">Hospitals</a>
+          <a class="nav-link" href="{% url 'hospital_filter' %}">Hospitals</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'about' %}">About</a>
