--- a/hospital_pricing/templates/hospital_pricing/hospital.html
+++ b/hospital_pricing/templates/hospital_pricing/hospital.html
@@ -1,13 +1,25 @@
 {% extends 'hospital_pricing/base.html' %}
 <!-- {% load static %} -->
+{% load crispy_forms_tags %}
+
 {% block content %}
+
 <article>
 	<header>
-    	<h2>Hospitals</h2>
-  	</header>
+	  <div class="row">
+	    <div class="col-sm-11">
+	      <h2>U.S. Hospitals</h2>
+	    </div>
+	    <div class="col-sm-1">
+	      {% if user.is_authenticated %}
+	        <a class="btn btn-outline-secondary" href="{% url 'hospital_new' %}">new</a>
+	      {% endif %}
+	    </div>
+	  </div>
+	</header>
 	{% if user.is_authenticated %}
 
-	  <!-- {% include 'hospital_pricing\pagination.html' %} -->
+	  {% include 'hospital_pricing\pagination.html' %}
 
 	  {% if hospitals %}
 	  <ul>
