filters and forms working

--- a/hospital_pricing/templates/hospital_pricing/about.html
+++ b/hospital_pricing/templates/hospital_pricing/about.html
@@ -4,7 +4,7 @@
 
 <h2>About US Hospitals</h2>
 
-<p>This site combines CMS data on the average amount different U.S. hospitals charge when billing for Diagnosis Related Code (DRG) 313: Chest Pain  <a href="https://unstats.un.org/unsd/methodology/m49/"
+<p>This site combines CMS data on the average amount different U.S. hospitals charge when billing for Diagnosis Related Code (DRG) 101: Seizures without major complications, 203: Bronchitis & Asthma without major complications, and 313: Chest Pain  <a href="https://unstats.un.org/unsd/methodology/m49/"
                                   alt="CMS DRG Pricing Dataset">country codes</a>
   with the CMS hospital quality scores. These scores are on a scale of 1 to 5 with 1 being the lowest overall quality. <a href="https://whc.unesco.org/en/list/"
                  alt="Hospital Quality Scores Dataset">Heritage Site</a> data.  UNESCO World Heritage
