--- a/hospital_pricing/templates/hospital_pricing/home.html
+++ b/hospital_pricing/templates/hospital_pricing/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>U.S. Hospitals</h1>
 
-<p> Hello World! Ever wonder if you're really getting your bang for your buck at your local hospital? This site compares a hospitals overall quality score to the average amount they charge for Diagnosis Related Code (DRG) 313: Chest Pain</p>
+<p> Hello World! Ever wonder if you're really getting your bang for your buck at your local hospital? This site compares a hospitals overall quality score to the average amount they charge for Diagnosis Related Code (DRG) 101: Seizures without major complications, 203: Bronchitis & Asthma without major complications, and 313: Chest Pain </p>
 <!-- https://www.cntraveler.com/galleries/2014-12-23/most-beautiful-unesco-world-heritage-sites-galapagos-taj-mahal-yosemite -->
 <img src='{% static "images/sumner-regional-medical-center-office.jpg" %}' alt="Sumner Medical Center, Gallatin, TN">
 
