--- a/hospital_pricing/templates/hospital_pricing/hospital_delete.html
+++ b/hospital_pricing/templates/hospital_pricing/hospital_delete.html
@@ -8,7 +8,7 @@
     {% csrf_token %}
     <p>Are you sure you want to delete the hospital "{{ hospital.hospital_name }}"?</p>
     <button type="submit" class="btn btn-outline-danger">Delete</button>
-    <a class="btn btn-outline-secondary" href="{% url 'hospital_detail' hospital.pk %}">Cancel</a>
+    <a class="btn btn-outline-secondary" href="{% url 'hospital_filter' %}">Cancel</a>
   </form>
 
 {% endblock content %}
