--- a/hospital_pricing/templates/hospital_pricing/hospital_update.html
+++ b/hospital_pricing/templates/hospital_pricing/hospital_update.html
@@ -12,31 +12,21 @@
   <!-- novalidate attribute required to render validation messages -->
   <form method="post" novalidate>
     {% csrf_token %}
-    <div class="row">
-      <div class="col-6">
-        {{ form.hospital_provider_identifier|as_crispy_field }}
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="col-6">
-        {{ form.hospital_name |as_crispy_field }}
-      </div>
-    </div>
-
-<!-- address -->
+    {{form | crispy }}
+<!-- 
     <div class="row">
       <div class="col-6">
         {{ form.address|as_crispy_field }}
       </div>
     </div>
-<!-- city -->
+
     <div class="row">
       <div class="col-6">
         {{ form.city|as_crispy_field }}
       </div>
     </div>
-<!-- state-->
+
     <div class="row">
       <div class="col-6">
         {{ form.state|as_crispy_field }}
@@ -50,9 +40,6 @@
       </div>
     </div>
 
-<!-- ask how to do this with foreign keys
- -->
-
 
     <div class="row">
       <div class="col-6">
@@ -64,13 +51,13 @@
       <div class="col-6">
         {{ form.hospital_quality_score|as_crispy_field }}
       </div>
-    </div>
+    </div> -->
 
 
 
   <button type="submit" class="btn btn-outline-success">Update</button>
   <!-- Restore missing button -->  
-    &nbsp;<a class="btn btn-outline-secondary" href="{% url 'hospital_filter' %}">Cancel</a>
+    &nbsp;<a class="btn btn-outline-secondary" href="{% url 'hospital_detail' hospital.pk %}">Cancel</a>
 
 </form>
 
