--- a/hospital_pricing/templates/hospital_pricing/hospital_update.html
+++ b/hospital_pricing/templates/hospital_pricing/hospital_update.html
@@ -14,8 +14,8 @@
     {% csrf_token %}
 
     {{form | crispy }}
-<!-- 
-    <div class="row">
+
+ <!--    <div class="row">
       <div class="col-6">
         {{ form.address|as_crispy_field }}
       </div>
@@ -51,9 +51,9 @@
       <div class="col-6">
         {{ form.hospital_quality_score|as_crispy_field }}
       </div>
-    </div> -->
+    </div>
 
-
+ -->
 
   <button type="submit" class="btn btn-outline-success">Update</button>
   <!-- Restore missing button -->  
