--- a/hospital_pricing/templates/hospital_pricing/pricing_delete.html
+++ b/hospital_pricing/templates/hospital_pricing/pricing_delete.html
@@ -6,7 +6,7 @@
 
   <form method="post">
     {% csrf_token %}
-    <p>Are you sure you want to delete the charge amount "{{ pricing.charge.charge }}"?</p>
+    <p>Are you sure you want to delete the charge amount "{{ pricing.price }}"?</p>
     <button type="submit" class="btn btn-outline-danger">Delete</button>
     <a class="btn btn-outline-secondary" href="{% url 'home' %}">Cancel</a>
   </form>
