--- a/hospital_pricing/templates/hospital_pricing/base.html
+++ b/hospital_pricing/templates/hospital_pricing/base.html
@@ -32,6 +32,9 @@
           <a class="nav-link" href="{% url 'hospital_filter' %}">Search Hospitals</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{% url 'pricing_filter' %}">Pricing</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'about' %}">About</a>
         </li>
       </ul>
