edit and new not working

--- a/hospital_pricing/templates/hospital_pricing/pricing.html
+++ b/hospital_pricing/templates/hospital_pricing/pricing.html
@@ -21,7 +21,7 @@
 <!-- 
 	  {% include 'hospital_pricing\pagination.html' %} -->
 
-	  {% if price %}
+	  {% if pricing.price %}
 	  <ul>
 	    {% for pricing_id in price %}
 
