--- a/hospital_pricing/templates/hospital_pricing/pricing_new.html
+++ b/hospital_pricing/templates/hospital_pricing/pricing_new.html
@@ -1,7 +1,7 @@
 {% extends 'hospital_pricing/base.html' %}
 
 {% load crispy_forms_tags %}
-
+{{ form.field|as_crispy_field }}
 {% block content %}
 
   <header>
@@ -11,7 +11,7 @@
   <!-- novalidate attribute required to render validation messages -->
   <form method="post" novalidate>
     {% csrf_token %}
-
+    {{ form.field|as_crispy_field }}
     {{form | crispy }}
 
 <!--     <div class="row">
