--- a/hospital_pricing/templates/hospital_pricing/hospital_update.html
+++ b/hospital_pricing/templates/hospital_pricing/hospital_update.html
@@ -57,7 +57,7 @@
 
   <button type="submit" class="btn btn-outline-success">Update</button>
   <!-- Restore missing button -->  
-    &nbsp;<a class="btn btn-outline-secondary" href="{% url 'hospital_detail' hospital.pk %}">Cancel</a>
+    &nbsp;<a class="btn btn-outline-secondary" href="{% url 'hospital_filter' %}">Cancel</a>
 
 </form>
 
