Fix broken templates, pricing forms and views.

--- a/hospital_pricing/templates/hospital_pricing/pricing.html
+++ b/hospital_pricing/templates/hospital_pricing/pricing.html
@@ -18,8 +18,8 @@
 	  </div>
 	</header>
 	{% if user.is_authenticated %}
-<!-- 
-	  {% include 'hospital_pricing\pagination.html' %} -->
+
+	  {% include 'hospital_pricing/pagination.html' %}
 
 	  {% if pricing.price %}
 	  <ul>
