--- a/hospital_pricing/templates/hospital_pricing/hospital_filter.html
+++ b/hospital_pricing/templates/hospital_pricing/hospital_filter.html
@@ -21,7 +21,9 @@
 	    </div>
 	  </div>
 	</header>
-{% include 'hospital_pricing\pagination.html' %}
+
+  {% include 'hospital_pricing/pagination.html' %}
+
   <div class="row">
     <div class="col-sm-3">
       <div class="px-2 py-2" style="border:1px solid #8E8D8A;">
