--- a/hospital_pricing/templates/hospital_pricing/pricing_detail.html
+++ b/hospital_pricing/templates/hospital_pricing/pricing_detail.html
@@ -22,18 +22,18 @@
        </div>
      </header>
 
-{% if price.price %}
+{% if price.hospital %}
     <div class="row">
       <div class="col-sm-2">
-        <p> Hospital ID </p>
+        <p> Hospital </p>
       </div>        
         <div class="col-sm-10">
-          <p>{{price.hospital_id}}</p>
+          <p>{{price.hospital}}</p>
         </div>
     </div> 
   {% endif %}
 
-{% if price.price %}
+{% if price.drg_code %}
     <div class="row">
       <div class="col-sm-2">
         <p> DRG Code </p>
@@ -45,7 +45,7 @@
   {% endif %}
 
 
-{% if price.price %}
+{% if price.pricing_id %}
     <div class="row">
       <div class="col-sm-2">
         <p> Pricing ID </p>
@@ -56,7 +56,7 @@
     </div> 
   {% endif %}
 
-{% if price %}
+{% if price.price %}
     <div class="row">
       <div class="col-sm-2">
         <p>Price</p>
@@ -68,6 +68,3 @@
   {% endif %}
 
 {% endblock %}
-
-<!--         {% for code in price %} -->
-<!--         {% endfor %} -->
